--- a/vercel.json
+++ b/vercel.json
@@ -4,10 +4,20 @@
     "functions": {
         "api/index.php": { "runtime": "vercel-php@0.6.0" }
     },
-    "routes": [{
-        "src": "/(.*)",
-        "dest": "/api/index.php"
-    }],
+    "routes": [
+        {
+          "src": "/assets/(.*)",
+          "dest": "/public/assets/$1"
+        },
+        {
+          "src": "/(.*)\\.(css|js|png|jpg|jpeg|gif|svg|webp|woff|woff2|ttf|otf|eot|mp4|webm|mp3|wav|ogg|ico)$",
+          "dest": "/public/$1"
+        },
+        {
+          "src": "/(.*)",
+          "dest": "/api/index.php"
+        }
+      ],
     "env": {
         "APP_ENV": "production",
         "APP_DEBUG": "true",
