--- a/vercel.json
+++ b/vercel.json
@@ -14,6 +14,10 @@
           "dest": "/public/$1"
         },
         {
+            "src": "/vendor/(.*)",
+            "dest": "/public/vendor/$1"
+          },
+        {
           "src": "/(.*)",
           "dest": "/api/index.php"
         }
